--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="AntDesign" Version="0.15.5" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Katheryne\Katheryne.csproj" />
+    </ItemGroup>
+
 </Project>
