--- a/Katheryne/Katheryne.csproj
+++ b/Katheryne/Katheryne.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+      <PackageReference Include="YamlDotNet" Version="13.7.0" />
     </ItemGroup>
 
 </Project>
