--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="AntDesign" Version="0.15.5" />
+      <PackageReference Include="BlazorMonaco" Version="3.1.0" />
     </ItemGroup>
 
     <ItemGroup>
