--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -9,6 +9,8 @@
     <ItemGroup>
       <PackageReference Include="AntDesign" Version="0.15.5" />
       <PackageReference Include="BlazorMonaco" Version="3.1.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.11" />
+      <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.11" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup>
