--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -1,18 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <RunAOTCompilation>true</RunAOTCompilation>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="AntDesign" Version="0.15.5" />
       <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
       <PackageReference Include="BlazorMonaco" Version="3.1.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.11" />
-      <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.11" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup>
