--- a/Katheryne.Tests/Katheryne.Tests.csproj
+++ b/Katheryne.Tests/Katheryne.Tests.csproj
@@ -9,8 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2"/>
-        <PackageReference Include="xunit" Version="2.4.2"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+        <PackageReference Include="Moq" Version="4.20.69" />
+        <PackageReference Include="xunit" Version="2.4.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
@@ -24,5 +25,15 @@
     <ItemGroup>
       <ProjectReference Include="..\Katheryne\Katheryne.csproj" />
     </ItemGroup>
+    
+    <Target Name="CopyTestFiles" AfterTargets="CoreCompile">
+        <ItemGroup>
+            <TestTxt Include="Katheryne/**/*.*"/>
+        </ItemGroup>
+        
+        <Copy SourceFiles="@(TestTxt)"
+              DestinationFolder="$(OutputPath)/%(RecursiveDir)"
+        />
+    </Target>
 
 </Project>
